[gd_scene load_steps=18 format=2]

[ext_resource path="res://world/jail/skill_tree_area/plant_behind.png" type="Texture" id=1]
[ext_resource path="res://world/jail/skill_tree_area/pollen.png" type="Texture" id=2]
[ext_resource path="res://world/jail/skill_tree_area/plant_front.png" type="Texture" id=3]
[ext_resource path="res://world/jail/skill_tree_area/grass_floor.png" type="Texture" id=4]
[ext_resource path="res://world/jail/skill_tree_area/roots.png" type="Texture" id=5]
[ext_resource path="res://system/components/callers/comp_event_caller.tscn" type="PackedScene" id=6]
[ext_resource path="res://system/random_scripts/area_signal_arg_remover.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 28, 32 )

[node name="skill_tree_area" type="Node2D"]

[node name="floor" type="Sprite" parent="."]
position = Vector2( 2, -6 )
z_index = -1
z_as_relative = false
texture = ExtResource( 4 )

[node name="roots" type="Sprite" parent="."]
position = Vector2( 2, -6 )
texture = ExtResource( 5 )

[node name="pollen" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 2, -6 )
frames = SubResource( 9 )
frame = 5
playing = true

[node name="plant_behind" type="Node2D" parent="."]
position = Vector2( 11, -12 )

[node name="Sprite" type="Sprite" parent="plant_behind"]
position = Vector2( 2, -6 )
texture = ExtResource( 1 )

[node name="plant_front" type="Node2D" parent="."]
position = Vector2( -19, -7 )

[node name="Sprite" type="Sprite" parent="plant_front"]
position = Vector2( -3, -8 )
texture = ExtResource( 3 )

[node name="plant_front2" type="Node2D" parent="."]
position = Vector2( 19, 9 )

[node name="Sprite" type="Sprite" parent="plant_front2"]
position = Vector2( -3, -8 )
texture = ExtResource( 3 )

[node name="PlayerSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
position = Vector2( -4, 0 )
shape = SubResource( 10 )

[node name="player_entered_event_caller" parent="PlayerSensor" instance=ExtResource( 6 )]
event = "player_in_skill_tree_area"

[node name="player_exited_event_caller" parent="PlayerSensor" instance=ExtResource( 6 )]
event = "player_left_skill_tree_area"

[connection signal="body_detected" from="PlayerSensor" to="PlayerSensor/player_entered_event_caller" method="call_event"]
[connection signal="body_entered" from="PlayerSensor" to="PlayerSensor" method="body_entered"]
[connection signal="body_exited" from="PlayerSensor" to="PlayerSensor" method="body_exited"]
[connection signal="body_left" from="PlayerSensor" to="PlayerSensor/player_exited_event_caller" method="call_event"]
